[gd_scene load_steps=13 format=3 uid="uid://bypxdqngg3gml"]

[ext_resource type="Texture2D" uid="uid://bnbp83o321xiw" path="res://sprites/Ak-fur7.png" id="1_b2ir8"]
[ext_resource type="Script" path="res://scripts/gun.gd" id="1_nt7ir"]
[ext_resource type="Texture2D" uid="uid://csp7vrfkuxtv2" path="res://sprites/shotEffect.png" id="3_dphfy"]
[ext_resource type="Texture2D" uid="uid://bjbeee6p58wod" path="res://sprites/EquipGun.png" id="4_nxu7o"]
[ext_resource type="Texture2D" uid="uid://cpuisky5luwlf" path="res://sprites/circle.png" id="5_pen78"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wuxll"]
atlas = ExtResource("3_dphfy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwlhs"]
atlas = ExtResource("3_dphfy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_m12ma"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuxll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwlhs")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx4fh"]
size = Vector2(16, 6)

[sub_resource type="Animation" id="Animation_deu2l"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gunSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("gunSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gtimt"]
resource_name = "Floating"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gunSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1, 1.7, 2),
"transitions": PackedFloat32Array(1.3, 1.2, 1.2, 0.287175, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, 0), Vector2(0, -1), Vector2(0, 1.8), Vector2(0, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("gunSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, -0.232129, 0.0523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cfdby"]
_data = {
"Equipped": SubResource("Animation_deu2l"),
"Floating": SubResource("Animation_gtimt")
}

[node name="Gun" type="Node2D" node_paths=PackedStringArray("shotEffect", "ShootPos", "shotCol", "anim") groups=["Guns"]]
script = ExtResource("1_nt7ir")
shotEffect = NodePath("gunSprite/ShootPos/shotEffect")
ShootPos = NodePath("gunSprite/ShootPos")
shotCol = NodePath("shotCol")
anim = NodePath("anim")

[node name="gunSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_b2ir8")

[node name="ShootPos" type="Marker2D" parent="gunSprite"]
position = Vector2(8, -1.5)

[node name="shotEffect" type="AnimatedSprite2D" parent="gunSprite/ShootPos"]
position = Vector2(2.4, 0)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_m12ma")
frame = 1
frame_progress = 1.0

[node name="Equip" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Equip"]
visible = false
shape = SubResource("RectangleShape2D_gx4fh")

[node name="shotCol" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="EquipSPR" type="Sprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(0, -13)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_nxu7o")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cfdby")
}

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.054642, 0.0650582, 0.325594, 0.3)
z_index = -2
position = Vector2(0, 9)
scale = Vector2(0.696069, 0.2)
texture = ExtResource("5_pen78")

[connection signal="area_entered" from="Equip" to="." method="_on_equip_area_entered"]
[connection signal="area_exited" from="Equip" to="." method="_on_equip_area_exited"]
[connection signal="timeout" from="shotCol" to="." method="_on_shot_col_timeout"]
